<resources>
    <string name="app_name">手機 MDM</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_unlock">UnlockActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_mdmMainPage">Main Page</string>
    <string name="default_version">國軍 MDM V2.61</string>
    <string name="default_barracks">福興營區</string>
    <string name="default_safetagnum">D083486</string>

    <string name="pref_header_mdmAbout">About</string>
    <string name="default_abouttitle">MDM V2.42: 2017-11-22</string>
    <string name="default_registeredtime">2017-11-29 15:07:40</string>
    <string name="default_lockedtime">2018-07-04 21:17:39</string>
    <string name="default_unlockedtime">2018-07-04 09:38:11</string>
    <string name="default_settingfileversion">V1.03 (2017-11-24 09:39:04)</string>
    <string name="default_lockedperiod">
        00時, 06時, 07時,\n08時, 09時, 10時, 11時, 12時, 13時,\n14時, 15時, 16時, 17時, 18時, 19時,\n20時, 21時, 22時, 23時
    </string>

    <string name="pref_header_mdmUpdateDB">Update DB</string>
    <string name="default_updateevent">事件：解鎖成功</string>
    <string name="default_updateuploadtime">未上傳</string>
    <string-array name="pref_events_list">
        <item>上鎖：常駐營區</item>
        <item>事件：開始解鎖</item>
        <item>事件：解鎖成功</item>
        <item>事件：自動上鎖開始定位</item>
        <item>事件：無法確認位置自動上鎖</item>
    </string-array>
    <string-array name="pref_events_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string name="date_picker_title">選擇日期時間</string>
    <string name="set">設定</string>
    <string name="cancel">取消</string>

    <!-- Example --><!-- Example --><!-- Example --><!-- Example --><!-- Example -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
