<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="VERSION"
        android:title="版本"
        android:summary="@string/default_version"
        android:defaultValue="@string/default_version"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="BARRACKS"
        android:title="營區"
        android:summary="@string/default_barracks"
        android:defaultValue="@string/default_barracks"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="SAFETAGNUM"
        android:title="管制標籤編號"
        android:summary="@string/default_safetagnum"
        android:defaultValue="@string/default_safetagnum"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>